--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -389,7 +389,7 @@
     <string name="processing_attachment">Procesare fișier atașat</string>
     <string name="hyperlink_confirmation_dialog_text_html">Se va lansa navigatorul web la pagina: &lt;br/&gt;&lt;br/&gt;&lt;u&gt;%s&lt;/u&gt;&lt;br/&gt;&lt;br/&gt;. Continuați?</string>
     <string name="dont_ask_again">Nu mai întreba</string>
-    <string name="none">Niciuna</string>
+    <string name="x_none">Niciuna</string>
     <string name="changes_affected_after_closing">Modificările vor avea efect după oprirea aplicației</string>
     <plurals name="incorrect_pin_remaining_attempts">
         <item quantity="one">PIN incorect, o încercare rămasă</item>
@@ -401,7 +401,7 @@
         <item quantity="few">%d încercări până la distrugerea sigură a datelor!</item>
         <item quantity="other">%d de încercări până la distrugerea sigură a datelor!</item>
     </plurals>
-    <string name="done">Gata</string>
+    <string name="x_done">Gata</string>
     <string name="logout">Deconectare</string>
     <string name="log_out">Deconectare %s?</string>
     <string name="logout_question">Sigur doriţi să vă deconectați?</string>
