--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,12 @@
     <string name="x_0">0</string>
     <!-- endregion -->
 
+    <!-- region Content descriptions: accessibility description for icons -->
+    <string name="x_label_icon_description">Label icon</string>
+    <string name="x_folder_icon_description">Folder icon</string>
+    <string name="x_parent_folder_icon_description">Folder with children icon</string>
+    <!-- endregion -->
+
     <!-- region Drawer -->
     <string name="drawer_contacts">Contacts</string>
     <string name="drawer_lock_the_app">Lock the app</string>
@@ -106,8 +112,6 @@
     <!-- region Parent Folder Picker -->
     <string name="parent_picker_title">Parent folder</string>
     <string name="parent_picker_header">If you do not select a parent folder, this new folder will be created as a top level folder.</string>
-    <string name="parent_picker_folder_icon_description">Folder icon</string>
-    <string name="parent_picker_parent_folder_icon_description">Folder with children icon</string>
     <!-- endregion -->
 
     <!-- region Dialogs -->
